Servicios/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marryo
  labels: 
    tipo: appsweb
