Servicios/depdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makdb
  labels:
    tipo: aplicacionweb
    estado: "1"
spec:
  selector:
    matchLabels:
      app: appweb
  replicas: 1
  template:
    metadata:
      labels:
        app: appweb
    spec:
      containers:
      - name: appweb
        image: aideeds/dbmaq
        ports:
        - containerPort: 3306
