Servicios/serviceapp.yaml
apiVersion: v1
kind: Service 
metadata:
  name: appm
  labels:
    tipo: appsweb
    app: webapp
spec:
    type: NodePort
    ports: 
    - port: 80
      nodePort: 30001
      protocol: TCP
    selector:
      app: webapp
