Servicios/servicedb.yaml
apiVersion: v1
kind: Service 
metadata:
  name: localhost2
  labels:
    tipo: aplicadb
    app: appweb
spec:
    ports: 
    - port: 3306
      targetPort: 3306

    selector:
      app: appweb
