Servicios/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-apli
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.marroyo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appweb
            port:
              number: 80
